--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: Dafenyuyu Blog
 SEOTitle: 达芬鱼鱼的博客 | Dafenyuyu Blog
-header-img: img/home-bg.jpg
+header-img: img/547020-1130893295.jpg
 email: huxpro@gmail.com
 description: "这里是达芬鱼鱼的blog，模板来自@Hux黄玄 大佬"
 keyword: "黄玄, Hux黄玄, Hux, 鬼栈, huxpro, @huxpro, 黄玄的博客, Hux Blog, 博客, 个人网站, 互联网, Web, JavaScript, React, React Native, 前端, 设计"
