--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ future: true
 RSS: false
 weibo_username: huxpro
 zhihu_username: huxpro
-github_username: huxpro
+github_username: Dafenyuyu
 twitter_username: huxpro
 #facebook_username:  huxpro
 #linkedin_username:  firstname-lastname-idxxxx
