--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ future: true
 # SNS settings
 RSS: false
 weibo_username: huxpro
-zhihu_username: huxpro
+zhihu_username: xing-zou-de-he-er-meng-24-51
 github_username: Dafenyuyu
 twitter_username: huxpro
 #facebook_username:  huxpro
