--- a/_config.yml
+++ b/_config.yml
@@ -14,8 +14,8 @@ future: true
 # SNS settings
 RSS: false
 weibo_username: huxpro
-zhihu_username: xing-zou-de-he-er-meng-24-51
-github_username: Dafenyuyu
+zhihu_username: huxpro
+github_username: huxpro
 twitter_username: huxpro
 #facebook_username:  huxpro
 #linkedin_username:  firstname-lastname-idxxxx
