--- a/_config.yml
+++ b/_config.yml
@@ -13,10 +13,10 @@ future: true
 
 # SNS settings
 RSS: false
-weibo_username: huxpro
-zhihu_username: huxpro
-github_username: huxpro
-twitter_username: huxpro
+weibo_username: 5746300247
+zhihu_username: xing-zou-de-he-er-meng-24-51
+github_username: Dafenyuyu
+twitter_username: 4WwKq72yeO7pTlT
 #facebook_username:  huxpro
 #linkedin_username:  firstname-lastname-idxxxx
 
